@@ -1,3 +1,0 @@
-Site URL: https://www.incestvidz.com/
-Contact: Incestvidzcom@gmail.com
-DMCA: https://www.incestvidz.com/dmca/
