@@ -1,3 +1,4 @@
 [B]Version 1.1.142[/B]
 - watcherotic - fix thumbnails
 - longvideos - new site
+- ividz - removed
